fix: courses css word spacing

--- a/styles/courses.css
+++ b/styles/courses.css
@@ -18,6 +18,7 @@ body {
     margin-right: auto;
     max-width: 800px;
     padding: 0 1rem;
+    word-spacing: 0.1rem;
 }
 
 h1, h2, h3 {
@@ -35,7 +36,6 @@ hr {
 p {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    text-align: justify;
 }
 
 ol, ul {
